Resolved .env conflict

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
-    listen 8000;
-
+    listen 80;
+    server_name ec2-35-159-99-105.eu-central-1.compute.amazonaws.com;
+	
     location /static/ {
         alias /staticfiles/;
     }
